<resources>
    <string name="app_name">Practica4Equipo2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prueba_dolph">Funcionara</string>
    <string name="p_triangle">PERIMETRO TRIANGULO</string>
    <string name="pdesc_triangle">triangulo_abc</string>
    <string name="intera_ptriangle">Ingresa el valor de sus lados</string>
    <string name="ladoaptriangle">Lado a</string>
    <string name="hint_aptriangle">a</string>
    <string name="ladobptriangle">Lado b</string>
    <string name="ladocptriangle">Lado c</string>
    <string name="calcularptriangle">Calcular</string>
    <string name="resultadoptriangle" />
    <string name="text_resultptriangle">Resultado:</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="perimetrocuadro">Perimetro Cuadro</string>
    <string name="numladospc">Ingrese el valor</string>
    <string name="clacularpc">Calcular</string>
    <string name="ladopc">Lado:</string>
    <string name="nextpc">Next</string>
    <string name="error_completar">Complete el campo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="name_fragment">Area del triángulo</string>
    <string name="triangulo">imagen de triángulo</string>
    <string name="valor_base">Ingrese el valor de la base:</string>
    <string name="cantidad_base">base</string>
    <string name="valor_altura">ingrese el valor de la altura:</string>
    <string name="cantidad_altura">altura</string>
    <string name="area">calcular</string>
    <string name="resultado_area">0</string>
    <string name="siguiente_interfaz">Siguiente</string>

    <string name="Perimetro_del_Circulo">Perimetro del Circulo</string>
    <string name="digitar_radio">Ingrese el Radio</string>
    <string name="calcular">CALCULAR</string>
    <string name="resultado">Resultado</string>
    <string name="ir_operacion">Ir a otra operacion</string>
    <string name="siguiente">Ir a otra operacion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="area_circulo_titulo">Área del circulo</string>
    <string name="radio">Radio:</string>
    <string name="area_circulo_calcular">Calcular</string>
    <string name="area_circulo">Área:</string>
    <string name="titulo_nav">FIGURAS GEOMETRICAS</string>
    <string name="area_triangulo">Area del triangulo</string>
    <string name="area_cuadrado">Area del Cuadrado</string>
    <string name="area_hexagono">Area del Hexagono</string>
    <string name="p_hexagono">Perimetro del hexagono</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="perimetro_hexagono">Perimetro Hexagono</string>
    <string name="calcularphexa">Calcular Perimetro</string>
    <string name="hexagono">Hexagono</string>
    <string name="p_6porl">P = 6 *L</string>
    <string name="tv_resultado">Resultado</string>
    <string name="bt_calcular">Calcular</string>
    <string name="ingrese_lado">Ingrese lado</string>
    <string name="resultado2">Resultado</string>
    <string name="Titulo_1">Area del hexagono</string>
    <string name="Titulo_2">Ingrese el valor del lado</string>
    <string name="Titulo_3">Calcular</string>
    <string name="Resultado">Resultado</string>
    <string name="demostrativo">TODO</string>
    <string name="ingrese_el_valor_del_lado">Ingrese el valor del lado</string>
    <string name="resultado_ah">Resultado</string>
    <string name="area_del_cuadrado">Area del Cuadrado</string>
    <string name="lado">Lado</string>
    <string name="resultado_ac">Resultado</string>

</resources>