<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/aliceblue">

        <TextView
            android:id="@+id/Titulo_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Titulo_1"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/Ed_Lado"
            android:layout_width="266dp"
            android:layout_height="55dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/ingrese_el_valor_del_lado"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textColorHint="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Titulo_1" />

        <TextView
            android:id="@+id/Tv_Respuesta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:gravity="center"
            android:hint="@string/resultado_ah"
            android:text="@string/Resultado"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Image" />

        <Button
            android:id="@+id/Bt_Resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/brown"
            android:text="@string/resultado2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Tv_Respuesta" />

        <ImageView
            android:id="@+id/Image"
            android:layout_width="219dp"
            android:layout_height="237dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="88dp"
            android:src="@drawable/hexagono"
            app:layout_constraintBottom_toTopOf="@+id/Tv_Respuesta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Ed_Lado"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>