<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        tools:context=".Perimetro_CirculoFragment">

        <!-- TODO: Update blank fragment layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aclonica"
                android:gravity="center"
                android:text="@string/Perimetro_del_Circulo"
                android:textColor="@color/firebrick"
                android:textSize="36sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="217dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/demostrativo"
                app:srcCompat="@drawable/perimetrocirculo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <EditText
                    android:id="@+id/et_radio"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/form_bt_circle_darkness"
                    android:ems="10"
                    android:hint="@string/digitar_radio"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:padding="6dp"
                    android:textColor="@color/firebrick"
                    android:textColorHighlight="@color/chocolate"
                    android:textColorHint="@color/firebrick"
                    android:textSize="20sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:padding="10dp">

                <Button
                    android:id="@+id/bt_calcular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/bt_calcular"
                    android:text="@string/calcularphexa"
                    android:textAllCaps="false"
                    android:textColor="@color/firebrick"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_resultado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultado"
                android:textColor="@color/black"

                android:textSize="16sp" />

        </LinearLayout>

    </FrameLayout>
</ScrollView>